--------------------------------------------------------------------------------
drkns 2025-11-10 21:12:28+00:00 - build 6596

1. Compiler warnings & minor cleanup.

--------------------------------------------------------------------------------
w17 2025-11-10 23:52:10+03:00 - build 6595

1. once Correction of 6592 \-n \{n} \{-n} \{name} backreference's is not valid

--------------------------------------------------------------------------------
w17 2025-11-10 22:37:26+03:00 - build 6594

1. Correction of 6592

--------------------------------------------------------------------------------
drkns 2025-11-10 18:14:47+00:00 - build 6593

1. Port a few regex tests from macrotest.lua.

2. Correction of 6588.

--------------------------------------------------------------------------------
w17 2025-11-10 05:04:24+03:00 - build 6592

1. ReRevert 6590 (fixed)

--------------------------------------------------------------------------------
w17 2025-11-10 02:31:43+03:00 - build 6591

1. Revert 6590 (not ready)

--------------------------------------------------------------------------------
w17 2025-11-10 00:59:47+03:00 - build 6590

1. RegExp: (?<name>... added, (?{name}... still works. Name starts with LETTER.

2. RegExp: relative backrefs -- \-n \{-n}; {-1} === upper known group when parsing.

3. RegExp: \g{name/num} added, \p{name/num} still works.

4. RegExp: Any \g... modifications allowed: \gnum \g{num} \g-num \g{-num} \g{name}

5. RegExp: $+{name/num} added, ${name/num) still works.

6. RegExp: \x{h} .. \x{hhhh} added, \xh .. \xhhhh still works.

7. RegExp: A bit code simplification.

--------------------------------------------------------------------------------
drkns 2025-11-08 19:25:50+00:00 - build 6589

1. gh-1042: Show file name in local user menu title.

--------------------------------------------------------------------------------
yulian5 2025-11-07 23:50:00-00:00 - build 6588

1. Fixed copy counter for skipped folders
